les manifestes/database.yml

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  clusterIP: None

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset
spec:
  replicas: 2
  serviceName: mysql-service
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql-instance
          image: mysql:latest
          ports:
            - containerPort: 3306
              name: db-port
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
            # - name: mysql-config
            #   mountPath: /etc/mysql
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
    # - metadata:
    #     name: mysql-config
    #   spec:
    #     accessModes: ["ReadWriteOnce"]
    #     resources:
    #       requests:
    #         storage: 1Gi
