les manifestes/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  # ports:
  #   - port: 80
  #     targetPort: 4200
  selector:
    app: frontend
  # type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 4200
      # nodePort: 30000


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: mahhans02/frontend_angular:v5
          ports:
            - containerPort: 4200
              name: http-port
